[Change] Initial commit of dnf role

--- a/roles/authorized_key/molecule/default/prepare.yml
+++ b/roles/authorized_key/molecule/default/prepare.yml
@@ -1,13 +1,11 @@
 ---
 - name: Prepare
   hosts: all
-  vars:
-    packages:
-      - openssh
-      - sudo
   tasks:
-    - name: Ensure packages are present
+    - name: Ensure prepare packages are present
       ansible.builtin.package:
-        name: "{{ packages }}"
+        name:
+          - openssh
+          - sudo
         state: present
 ...
