--- a/roles/epel/molecule/default/prepare.yml
+++ b/roles/epel/molecule/default/prepare.yml
@@ -2,7 +2,7 @@
 - name: Prepare
   hosts: all
   tasks:
-    - name: Ensure packages are present
+    - name: Ensure prepare packages are present
       ansible.builtin.package:
         name:
           - sudo
