--- a/roles/group/molecule/default/prepare.yml
+++ b/roles/group/molecule/default/prepare.yml
@@ -1,13 +1,11 @@
 ---
 - name: Prepare
   hosts: all
-  vars:
-    packages:
-      - shadow-utils
-      - sudo
   tasks:
-    - name: Ensure packages are present
+    - name: Ensure prepare packages are present
       ansible.builtin.package:
-        name: "{{ packages }}"
+        name:
+          - shadow-utils
+          - sudo
         state: present
 ...
