--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 ansible-core==2.15.0
 ansible-lint<7
+awscli==1.29.20
+boto3==1.28.20
 docker==6.1.3
 molecule==5.1.0
-molecule-docker==2.1.0
+molecule-plugins==23.5.0
 requests<2.29
 urllib3<2
