--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -3,7 +3,7 @@
   tags:
     - git
   become: true
-  package:
+  ansible.builtin.package:
     name: "{{ git_packages }}"
     state: present
 
@@ -41,7 +41,6 @@
   loop_control:
     label: "{{ _repository.repo.split('/')[-1] }}"
     loop_var: _repository
-  vars:
   when:
     - _repository.dest is defined
     - _repository.repo is defined
