--- a/roles/selinux/tasks/main.yml
+++ b/roles/selinux/tasks/main.yml
@@ -13,7 +13,7 @@
   when:
     - ansible_distribution_major_version | int <= 7
 
-- name: Ensure the selinux packages are installed
+- name: Ensure selinux packages are installed
   tags:
     - selinux
   become: true
@@ -38,7 +38,7 @@
     update_kernel_param: "{{ selinux_update_kernel_param }}"
   register: _selinux
 
-- name: Ensure host is rebooted
+- name: Ensure selinux host is rebooted
   tags:
     - selinux
   become: true
