--- a/roles/group/meta/main.yml
+++ b/roles/group/meta/main.yml
@@ -3,7 +3,7 @@ dependencies: []
 galaxy_info:
   role_name: group
   author: Taylor Kimball
-  description: Add or update groups
+  description: Manage presence of groups on a host
   license: GPLv3
   min_ansible_version: 2.14.0
   platforms:
