[Change] Ensure become: true on user/group/key tasks

--- a/roles/authorized_key/tasks/main.yml
+++ b/roles/authorized_key/tasks/main.yml
@@ -2,6 +2,7 @@
 - name: Ensure authorized keys are present
   tags:
     - authorized_key
+  become: true
   ansible.posix.authorized_key:
     comment: "{{ _key.comment | default(omit) }}"
     exclusive: "{{ _key.exclusive | default(false) }}"
