--- a/roles/authorized_key/molecule/default/verify.yml
+++ b/roles/authorized_key/molecule/default/verify.yml
@@ -7,6 +7,7 @@
         cmd: >
           ssh-keygen -l -f /root/.ssh/authorized_keys
       register: _command
+      changed_when: false
 
     - name: Ensure ssh-keygen out is expected
       ansible.builtin.assert:
