--- a/roles/nscd/tasks/main.yml
+++ b/roles/nscd/tasks/main.yml
@@ -36,7 +36,7 @@
     - nscd
   become: true
   ansible.builtin.service:
-    enabled: yes
+    enabled: true
     name: nscd
     state: started
 ...
