[Change] Fix verification playbook to use correct group

--- a/roles/docker/molecule/default/verify.yml
+++ b/roles/docker/molecule/default/verify.yml
@@ -2,21 +2,14 @@
 - name: Verify
   hosts: all
   tasks:
-    - name: Ensure user information is gathered
+    - name: Ensure docker group information is gathered
       ansible.builtin.getent:
         database: group
         fail_key: false
-        key: "{{ _user }}"
-      register: _getent
-      loop:
-        - linuxhq
-      loop_control:
-        label: "{{ _user }}"
-        loop_var: _user
+        key: docker
 
-    - name: Ensure users are in expected state
+    - name: Ensure docker group is in expected state
       ansible.builtin.assert:
         that:
-          - _getent.results[0].ansible_facts.getent_passwd.linuxhq[1] == '2000'
-          - _getent.results[1].ansible_facts.getent_passwd.ftp is none
+          - "'linuxhq' in getent_group.docker"
 ...
