--- a/roles/epel/molecule/default/prepare.yml
+++ b/roles/epel/molecule/default/prepare.yml
@@ -1,12 +1,10 @@
 ---
 - name: Prepare
   hosts: all
-  vars:
-    packages:
-      - sudo
   tasks:
     - name: Ensure packages are present
       ansible.builtin.package:
-        name: "{{ packages }}"
+        name:
+          - sudo
         state: present
 ...
