[Change] Fix linting issue that ansible-lint cli didn't catch

--- a/roles/selinux/molecule/default/verify.yml
+++ b/roles/selinux/molecule/default/verify.yml
@@ -9,6 +9,7 @@
         cmd: >
           sestatus
       register: _sestatus
+      changed_when: false
 
     - name: Ensure sestatus matches inventory
       ansible.builtin.assert:
