[Change] A minor cleanup

--- a/roles/git/molecule/default/converge.yml
+++ b/roles/git/molecule/default/converge.yml
@@ -1,12 +1,11 @@
 ---
-- name: Ensure ansible role is executed
+- name: Converge
   hosts: all
   vars:
     git_become: true
     git_repositories:
       - repo: https://github.com/linuxhq/ansible-collection-linux.git
         dest: /tmp/linuxhq.linux
-
   roles:
     - linuxhq.linux.git
 ...
