[Change] Update molecule platform configs [Change] Update workflow to use ansible-core 2.15.0

--- a/roles/group/molecule/default/converge.yml
+++ b/roles/group/molecule/default/converge.yml
@@ -1,12 +1,11 @@
 ---
 - name: Converge
   hosts: all
-  vars:
-    groupadd:
-      - name: linuxhq
-        gid: 2000
-    groupdel:
-      - name: wheel
   roles:
-    - linuxhq.linux.group
+    - role: linuxhq.linux.group
+      groupadd:
+        - name: linuxhq
+          gid: 2000
+      groupdel:
+        - name: wheel
 ...
