--- a/roles/group/molecule/default/verify.yml
+++ b/roles/group/molecule/default/verify.yml
@@ -6,18 +6,12 @@
       ansible.builtin.getent:
         database: group
         fail_key: false
-        key: "{{ _group }}"
       register: _getent
-      loop:
-        - linuxhq
-        - wheel
-      loop_control:
-        label: "{{ _group }}"
-        loop_var: _group
 
     - name: Ensure groups are in expected state
       ansible.builtin.assert:
         that:
-          - _getent.results[0].ansible_facts.getent_group.linuxhq[1] == '2000'
-          - _getent.results[1].ansible_facts.getent_group.wheel is none
+          - "'linuxhq' in getent_group"
+          - "'wheel' not in getent_group"
+          - getent_group.linuxhq[1] == '2000'
 ...
