--- a/roles/user/molecule/default/molecule.yml
+++ b/roles/user/molecule/default/molecule.yml
@@ -9,61 +9,61 @@ driver:
 
 platforms:
   - name: &c7 centos-7
+    aws_profile: molecule
     connection_options:
       ansible_user: centos
     image_owner: '125523088429'
     image_name: 'CentOS Linux 7 x86_64 - 2211'
     instance_type: t2.micro
     key_inject_method: ec2
-    key_name: molecule
     vpc_subnet_id: subnet-00d20739fc370ed5e
     tags:
       Name: *c7
 
   - name: &a8 almalinux-8
+    aws_profile: molecule
     connection_options:
       ansible_user: ec2-user
     image_owner: '764336703387'
     image_name: 'AlmaLinux OS 8.8.20230524 x86_64'
     instance_type: t2.micro
     key_inject_method: ec2
-    key_name: molecule
     vpc_subnet_id: subnet-00d20739fc370ed5e
     tags:
       Name: *a8
 
   - name: &a9 almalinux-9
+    aws_profile: molecule
     connection_options:
       ansible_user: ec2-user
     image_owner: '764336703387'
     image_name: 'AlmaLinux OS 9.2.20230804 x86_64'
     instance_type: t2.micro
     key_inject_method: ec2
-    key_name: molecule
     vpc_subnet_id: subnet-00d20739fc370ed5e
     tags:
       Name: *a9
 
   - name: &d11 debian-11
+    aws_profile: molecule
     connection_options:
       ansible_user: admin
     image_owner: '136693071363'
     image_name: 'debian-11-amd64*'
     instance_type: t2.micro
     key_inject_method: ec2
-    key_name: molecule
     vpc_subnet_id: subnet-00d20739fc370ed5e
     tags:
       Name: *d11
 
   - name: &d12 debian-12
+    aws_profile: molecule
     connection_options:
       ansible_user: admin
     image_owner: '136693071363'
     image_name: 'debian-12-amd64*'
     instance_type: t2.micro
     key_inject_method: ec2
-    key_name: molecule
     vpc_subnet_id: subnet-00d20739fc370ed5e
     tags:
       Name: *d12
