--- a/roles/postfix/defaults/main.yml
+++ b/roles/postfix/defaults/main.yml
@@ -9,8 +9,8 @@ postfix_databases:
 postfix_packages:
   - postfix
 postfix_parameters:
-  alias_database: hash:/etc/aliases'
-  alias_maps: hash:/etc/aliases'
+  alias_database: hash:/etc/aliases
+  alias_maps: hash:/etc/aliases
   command_directory: /usr/sbin
   daemon_directory: /usr/libexec/postfix
   data_directory: /var/lib/postfix
