--- a/roles/yum_cron/molecule/default/verify.yml
+++ b/roles/yum_cron/molecule/default/verify.yml
@@ -6,7 +6,7 @@
       ansible.builtin.service_facts:
       register: _service_facts
 
-    - name: Ensure package is present in package facts
+    - name: Ensure service is present in service facts
       ansible.builtin.assert:
         that:
           - services['yum-cron.service'] is defined
