--- a/roles/rc_local/tasks/main.yml
+++ b/roles/rc_local/tasks/main.yml
@@ -56,7 +56,7 @@
   tags:
     - rc_local
   become: true
-  ansible.builtin.systemd:
+  ansible.builtin.systemd_service:
     daemon_reload: true
   when:
     - rc_local | length > 0
