[Change] Rename rc_local to systemd_rc_local

--- a/roles/systemd_rc_local/tasks/main.yml
+++ b/roles/systemd_rc_local/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ensure systemd package is present
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.apt:
     name: systemd
@@ -12,7 +12,7 @@
 
 - name: Ensure systemd package is present
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.yum:
     name: systemd
@@ -23,7 +23,7 @@
 
 - name: Ensure systemd package is present
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.dnf:
     name: systemd
@@ -32,43 +32,43 @@
     - ansible_os_family == 'RedHat'
     - ansible_distribution_major_version | int >= 8
 
-- name: Ensure rc.local os specific vars are present
+- name: Ensure system rc.local os specific vars are present
   tags:
-    - rc_local
+    - systemd_rc_local
   ansible.builtin.include_vars:
     file: "{{ ansible_os_family }}.yml"
 
-- name: Ensure rc.local template is present
+- name: Ensure systemd rc.local template is present
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.template:
-    dest: "{{ rc_local_path }}"
+    dest: "{{ systemd_rc_local_path }}"
     group: root
     mode: '0755'
     owner: root
     src: rc.local.j2
   notify: Restart rc-local
   when:
-    - rc_local | length > 0
+    - systemd_rc_local | length > 0
 
 - name: Ensure systemd is reloaded
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.systemd_service:
     daemon_reload: true
   when:
-    - rc_local | length > 0
+    - systemd_rc_local | length > 0
 
-- name: Ensure rc-local is started and enabled on boot
+- name: Ensure systemd rc-local is started and enabled on boot
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.systemd_service:
     enabled: true
     name: rc-local
     state: started
   when:
-    - rc_local | length > 0
+    - systemd_rc_local | length > 0
 ...
