--- a/roles/systemd_rc_local/handlers/main.yml
+++ b/roles/systemd_rc_local/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Restart rc-local
   tags:
-    - rc_local
+    - systemd_rc_local
   become: true
   ansible.builtin.systemd_service:
     name: rc-local
