--- a/roles/systemd_rc_local/meta/main.yml
+++ b/roles/systemd_rc_local/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 dependencies: []
 galaxy_info:
-  role_name: rc_local
+  role_name: systemd_rc_local
   author: Taylor Kimball
   description: Compatibility
   license: GPLv3
@@ -17,4 +17,5 @@ galaxy_info:
     - linux
     - local
     - rc
+    - systemd
 ...
