--- a/roles/systemd_rc_local/molecule/default/converge.yml
+++ b/roles/systemd_rc_local/molecule/default/converge.yml
@@ -2,7 +2,7 @@
 - name: Converge
   hosts: all
   roles:
-    - role: linuxhq.linux.rc_local
-      rc_local:
+    - role: linuxhq.linux.systemd_rc_local
+      systemd_rc_local:
         - echo 1 > /proc/sys/kernel/modules_disabled
 ...
