[Change] Initial commit of virtualenv role

--- a/molecule/prepare.yml
+++ b/molecule/prepare.yml
@@ -11,8 +11,10 @@
         name:
           - passwd
           - python3
+          - python3-venv
           - sudo
         state: present
+        update_cache: true
       when:
         - ansible_os_family == 'Debian'
 
@@ -26,6 +28,7 @@
           - shadow-utils
           - sudo
         state: present
+        update_cache: true
       when:
         - ansible_os_family == 'RedHat'
 ...
