[Change] Fix module name yum -> dnf

--- a/roles/dnf_automatic/tasks/main.yml
+++ b/roles/dnf_automatic/tasks/main.yml
@@ -3,7 +3,7 @@
   tags:
     - dnf_automatic
   become: true
-  ansible.builtin.yum:
+  ansible.builtin.dnf:
     name: dnf-automatic
     state: present
 
