[Change] Removal of unrelated verify tasks

--- a/roles/monit/molecule/default/verify.yml
+++ b/roles/monit/molecule/default/verify.yml
@@ -1,17 +1,5 @@
 ---
 - name: Verify
   hosts: all
-  tasks:
-    - name: Ensure user information is gathered
-      ansible.builtin.getent:
-        database: passwd
-        fail_key: false
-      register: _getent
-
-    - name: Ensure users are in expected state
-      ansible.builtin.assert:
-        that:
-          - "'linuxhq' in getent_passwd"
-          - "'ftp' not in getent_passwd"
-          - getent_passwd.linuxhq[1] == '2000'
+  tasks: []
 ...
