[Change] Update example playbook filenames

--- a/roles/openssh_client/molecule/default/converge.yml
+++ b/roles/openssh_client/molecule/default/converge.yml
@@ -23,14 +23,14 @@
         - key: UserKnownHostsFile
           value: /dev/null
       openssh_client_d:
-        - file: linuxhq
+        - file: 01-linuxhq
           host: linuxhq.net
           options:
             - key: HashKnownHosts
               value: 'no'
             - key: LogLevel
               value: QUIET
-        - file: tkimball
+        - file: 02-tkimball
           host: taylorkimball.com
           options:
             - key: ForwardAgent
