[Change] Convert openssh_client from list->dict

--- a/roles/openssh_client/molecule/default/converge.yml
+++ b/roles/openssh_client/molecule/default/converge.yml
@@ -4,37 +4,25 @@
   roles:
     - role: linuxhq.linux.openssh_client
       openssh_client:
-        - key: AddressFamily
-          value: inet
-        - key: Ciphers
-          value: aes128-ctr,aes192-ctr,aes256-ctr
-        - key: ForwardAgent
-          value: 'no'
-        - key: ForwardX11
-          value: 'no'
-        - key: HashKnownHosts
-          value: 'yes'
-        - key: LogLevel
-          value: ERROR
-        - key: MACs
-          value: hmac-sha2-256,hmac-sha2-512
-        - key: StrictHostKeyChecking
-          value: 'no'
-        - key: UserKnownHostsFile
-          value: /dev/null
+        AddressFamily: inet
+        Ciphers: aes128-ctr,aes192-ctr,aes256-ctr
+        ForwardAgent: no
+        ForwardX11: no
+        HashKnownHosts: yes
+        LogLevel: ERROR
+        MACs: hmac-sha2-256,hmac-sha2-512
+        StrictHostKeyChecking: no
+        UserKnownHostsFile: /dev/null
+
       openssh_client_d:
         - file: 01-linuxhq
           host: linuxhq.net
           options:
-            - key: HashKnownHosts
-              value: 'no'
-            - key: LogLevel
-              value: QUIET
+            HashKnownHosts: no
+            LogLevel: QUIET
         - file: 02-tkimball
           host: taylorkimball.com
           options:
-            - key: ForwardAgent
-              value: 'yes'
-            - key: ForwardX11
-              value: 'yes'
+            ForwardAgent: yes
+            ForwardX11: yes
 ...
