--- a/roles/openssh_server/molecule/default/converge.yml
+++ b/roles/openssh_server/molecule/default/converge.yml
@@ -5,38 +5,38 @@
     - role: linuxhq.linux.openssh_server
       openssh_server:
         AddressFamily: inet
-        AllowAgentForwarding: no
-        ChallengeResponseAuthentication: no
+        AllowAgentForwarding: false
+        ChallengeResponseAuthentication: false
         Ciphers: aes128-ctr,aes192-ctr,aes256-ctr
         ClientAliveCountMax: 0
         ClientAliveInterval: 300
         Compression: delayed
-        GSSAPIAuthentication: no
-        GSSAPICleanupCredentials: yes
-        HostbasedAuthentication: no
+        GSSAPIAuthentication: false
+        GSSAPICleanupCredentials: true
+        HostbasedAuthentication: false
         HostKey:
           - /etc/ssh/ssh_host_rsa_key
           - /etc/ssh/ssh_host_ecdsa_key
           - /etc/ssh/ssh_host_ed25519_key
-        IgnoreRhosts: yes
-        KerberosAuthentication: no
+        IgnoreRhosts: true
+        KerberosAuthentication: false
         LogLevel: INFO
         LoginGraceTime: 30
         MACs: hmac-sha2-256,hmac-sha2-512
-        PasswordAuthentication: no
-        PermitEmptyPasswords: no
-        PermitRootLogin: no
-        PermitUserEnvironment: no
-        PrintLastLog: yes
-        PrintMotd: yes
+        PasswordAuthentication: false
+        PermitEmptyPasswords: false
+        PermitRootLogin: false
+        PermitUserEnvironment: false
+        PrintLastLog: true
+        PrintMotd: true
         Port: 22
         Protocol: 2
-        PubkeyAuthentication: yes
-        StrictModes: yes
+        PubkeyAuthentication: true
+        StrictModes: true
         Subsystem: sftp internal-sftp -p close,lstat,mkdir,open,realpath,write
         SyslogFacility: AUTHPRIV
-        TCPKeepAlive: yes
-        UseDNS: no
-        UsePAM: yes
-        X11Forwarding: no
+        TCPKeepAlive: true
+        UseDNS: false
+        UsePAM: true
+        X11Forwarding: false
 ...
