[Change] Add monit process to available checks

--- a/roles/monit/defaults/main.yml
+++ b/roles/monit/defaults/main.yml
@@ -27,6 +27,7 @@ monit_mailformat:
     Your faithful employee,
     Monit
 monit_mailserver: localhost
+monit_process: []
 monit_program: []
 monit_start_delay: 0
 ...
