[Change] Fix stub zones default value

--- a/roles/unbound/defaults/main.yml
+++ b/roles/unbound/defaults/main.yml
@@ -11,6 +11,6 @@ unbound_python: {}
 unbound_remote_control: {}
 unbound_rpzs: {}
 unbound_server: {}
-unbound_stub_zones: []
+unbound_stub_zones: {}
 unbound_views: {}
 ...
