--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Ensure python3 is present
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.11'
 
       - name: Ensure yamllint is present
         run: pip install yamllint
