[Change] Migrate sysctl variables from list->dict

--- a/roles/sysctl/molecule/default/converge.yml
+++ b/roles/sysctl/molecule/default/converge.yml
@@ -4,11 +4,11 @@
   roles:
     - role: linuxhq.linux.sysctl
       sysctl_conf:
-        - key: kernel.modules_disabled
-          value: '1'
+        kernel.dmesg_restrict: 1
+        kernel.modules_disabled: 1
       sysctl_d:
         - name: 98-ansible
           parameters:
-            - key: vm.swappiness
-              value: '5'
+            kernel.panic: 1
+            vm.swappiness: 5
 ...
